src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__album_details_ui__album_details_ui_tests__tests__snapshot_tests__loading_album_details_AlbumHistoryDetails_1.snap
---
source: src/ui/lidarr_ui/library/album_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Album Details  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Tracks │ History │ Manual Search                                                                                                      │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │ Loading ...                                                                                                                           │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                           ╭───────────────────────────────────  Details  ───────────────────────────────────╮                         │               
             │                           │Source Title:                                                                    │                         │               
             │                           │Event Type: unknown                                                              │                         │               
             │                           │Quality:                                                                         │                         │               
             │                           │Date: 1970-01-01 00:00:00 UTC                                                    │                         │               
             │                           │No additional details available.                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           │                                                                                 │                         │               
             │                           ╰─────────────────────────────────────────────────────────────────────────────────╯                         │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
